k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "hello"
spec:
  containers:
    - name: hello
      image: nginx:1.17
