k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main
spec:
  backend:
    serviceName: udemy-front
    servicePort: 80
